@@ -2,6 +2,7 @@ Gaupol 0.12
 ===========
 
  [ ] Add a capitalization task to the text correction assistant
+ [D] Add "All supported files" filter to the open dialog
  [D] Fix error saving after splitting project (#10041)
  [D] Fix NameErrors with lambda functions (#10034)
  [D] Fix markup tooltip hack to work with (Py)GTK 2.12
